# QT_projects-

AssetManagerInterface/: AssetManagerInformation.cpp  AssetManagerInformation.h  AssetManagerInterface.h  AssetReport.cpp  AssetReport.h  CMakeLists.txt  assetmainwindow.cpp  assetmainwindow.h  assetmainwindow.ui  assetrecord.cpp  assetrecord.h  assetrecord.ui  main.cpp
AssetManagerInterface/Database_files/: AssetManagerDBService.cpp  AssetManagerDBService.h  AssetManagerDBServiceInterface.h  CMakeLists.txt
LMS3/: LMS3.pro  addbookss.cpp  addbookss.h  addbookss.ui  adduser.cpp  adduser.h  adduser.ui  appmainpage.cpp  appmainpage.h  appmainpage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  returnbook.cpp  returnbook.h  returnbook.ui  searchbook.cpp  searchbook.h  searchbook.ui  viewbookss.cpp  viewbookss.h  viewbookss.ui  viewuser.cpp  viewuser.h  viewuser.ui
build-LMS3-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  object_script.LMS3.Debug  object_script.LMS3.Release  ui_addbookss.h  ui_adduser.h  ui_appmainpage.h  ui_mainwindow.h  ui_returnbook.h  ui_searchbook.h  ui_viewbookss.h  ui_viewuser.h
build-LMS3-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/debug/: moc_addbookss.cpp  moc_adduser.cpp  moc_appmainpage.cpp  moc_mainwindow.cpp  moc_returnbook.cpp  moc_searchbook.cpp  moc_viewbookss.cpp  moc_viewuser.cpp
lmswith1window/: mainwindow.cpp  mainwindow.h  mainwindow.ui
mytask/: CMakeLists.txt  dialogt1.cpp  dialogt1.h  dialogt1.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
